--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
+    "@vuepic/vue-datepicker": "^9.0.1",
     "@vueuse/core": "^10.9.0",
     "firebase": "^10.10.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5",
     "vue3-carousel": "^0.3.1",
+    "vue3-datepicker": "^0.4.0",
     "vuefire": "^3.1.23"
   },
   "devDependencies": {
